# quickdiff

./: .gitignore  CMakeLists.txt  LICENSE  README.md
py/: Order.py
src/: quickdiff.cpp
